# restreflect

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  fastly.toml
.github/workflows/: deploy.yml  test.yml
assets/: index.html
assets/site/: swagger-ui.js
assets/swagger-ui/: index.html  log.es-bundle-core-sizes.swagger-ui.txt  log.es-bundle-sizes.swagger-ui.txt  swagger-initializer.js  swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle.js  swagger-ui.js
src/: assets.rs  auth.rs  cookies.rs  dynamic_data.rs  http_methods.rs  images.rs  lib.rs  main.rs  redirects.rs  request_inspection.rs  response_formats.rs  response_inspection.rs  status_codes.rs
