[package]
name = "RESTReflect"
version = "0.0.1"
authors = ["Yann Hamon <yann+nospam@mandragor.org>"]
edition = "2018"
descrition = "REST. Reflect. Enjoy a simple HTTP Echo server."
license = "MIT"
license-file = "LICENSE"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.8.0"
regex = "1"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0"
rust-embed="6.3.0"
utoipa = "2"
